## Vaucanson, a generic library for finite state machines.
## Copyright (C) 2006 The Vaucanson Group.
##
## This program is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License
## as published by the Free Software Foundation; either version 2
## of the License, or (at your option) any later version.
##
## The complete GNU General Public Licence Notice can be found as the
## `COPYING' file in the root directory.
##
## The Vaucanson Group consists of people listed in the `AUTHORS' file.

###
### Autoconf macros are installable and distributable.
###

m4datadir = $(datadir)/aclocal
dist_m4data_DATA = vcsn.m4 vcsn-xml.m4 ax_boost_base.m4 ax_boost_wserialization.m4


EXTRA_DIST =					\
find_tests.sh					\
fix-rights					\
move-if-change					\
Text/Shellwords.pm
